--- a/GitColonyEval/MainPage.xaml
+++ b/GitColonyEval/MainPage.xaml
@@ -6,6 +6,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.BottomAppBar>
+        <CommandBar>
+            <AppBarButton Icon="Find"
+                          Label="Search" />
+            <AppBarSeparator></AppBarSeparator>
+            <AppBarButton Icon="Help" 
+                          Label="Help"/>
+        </CommandBar>
+    </Page.BottomAppBar>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
